[package]
name = "rust_common"
version = "0.1.4"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "rust common modules"


[dependencies]
num-traits = { workspace = true }
num-derive = { workspace = true }
log = { workspace = true }

[dev-dependencies]
uom = { version = "0.37", default-features = false, features = ["si", "f32", "autoconvert"] }

[build-dependencies]
regex = "1"
